# dropitdown

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  worker.yml
app/: Package.resolved  Package.swift  build.sh  sign-and-notarize.sh
app/Resources/: AppIcon.icns  Info.plist  build-icon.sh
app/Sources/DropItDown/: ActionPanel.swift  App.swift  AppDelegate.swift  AppLogoView.swift  Common.swift  ConfigStore.swift  ContentView.swift  FilesView.swift  HistoryStore.swift  HistoryView.swift  IgnoreView.swift  LoginItem.swift  MarkdownText.swift  NotesView.swift  OnboardingView.swift  PythonRunner.swift  RootView.swift  RulesView.swift  SettingsView.swift  StatusItemController.swift
docs/: launch-checklist.md  launch-posts.md  prd.md
site/: README.md  _headers  index.html  styles.css
src/dropitdown/: __main__.py  archive.py  classify.py  cli.py  config.py  convert.py  correction.py  ignore.py  journal.py  notify.py  rules.py  watcher.py
worker/: README.md  package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
